# dbmisvc-starter

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  Dockerfile  README.md  dev-requirements.in  dev-requirements.txt  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.github/workflows/: requirements-update.yml
docker-entrypoint-init.d/: 45-django-admin.sh
starter/: manage.py
starter/starter/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
starter/tests/: __init__.py  runner.py
