[build-system]
requires = [ "setuptools >= 35.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.tox]
legacy_tox_ini = '''

[tox]
envlist = py{36,37,38,39}-django{22,32}
install_command = pip install {opts} "{packages}"

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
basepython =
    py36: python3.6
    py37: python3.7
    py38: python3.8
    py39: python3.9

commands =
	nosetests {posargs}

deps =
    -rrequirements.txt
    django22: Django>=2.2,<2.3
    django32: Django>=3.2,<3.3
'''
