[project]
name = "dbmisvc-starter"
version = "0.1.0"
description = "A starter for a DBMISVC-style application"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.txt"}
authors = [
  {name = "HMS DBMI Tech Dev Core" }
]
maintainers = [
  {name = "HMS DBMI Tech Dev Core" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Bug Reports" = "https://github.com/hms-dbmi/dbmisvc-app-test/issues"
"Source" = "https://github.com/hms-dbmi/dbmisvc-app-test/"

[build-system]
requires = [ "setuptools >= 35.0.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.tox]
legacy_tox_ini = '''

[tox]
envlist = py{36,37,38,39}-django{22,32}
install_command = pip install {opts} "{packages}"

[gh-actions]
python =
    3.6: py36
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
basepython =
    py36: python3.6
    py37: python3.7
    py38: python3.8
    py39: python3.9

commands =
	nosetests {posargs}

deps =
    -rrequirements.txt
    django22: Django>=2.2,<2.3
    django32: Django>=3.2,<3.3
'''
